app/assets/stylesheets/avalonplayer.css
#oc_quality { 
  display: block; 
}

#oc_quality select {
  text-transform: capitalize;
}

#oc_body {
  width: 590px;
  border: 1px solid #DDD;
  background-color: #EEE;

  /* Override the defaults */
  margin-left: 0;
  margin-bottom: 0;
}

#oc_flash-player { 
  height: 350px; 
  background-color: black;
}

#oc_flash-player-loading.video { 
  position: absolute;
  top: 45%;
  left: 25%;
  width: 50%;
  height: 44px;
 
  background: rgb(0, 0, 0);  
  color: rgb(255, 255, 255);
  text-align: center;  
}

#oc_flash-player-loading,
#oc_flash-player-loading.audio {
  position: relative;
  top: 0;
  left: 0;
  
  /* Make it the same as the video controls that will replace it once the 
   * stream is ready */
  line-height: 44px;
  height: 44px;
}

#oc_flash-player { 
  height: 0px 
}

#oc_flash-player.video {
  height: 329px;
  width: 590px;
}

#oc_sound { 
  min-width: 106px;
}
#oc_video-time { 
  min-width: 210px;
}

#streamQuality {
  margin-top: 18px;
}

@media (min-width: 1400px) {
    #oc_body,
    #oc_flash-player-loading.audio { 
      width: 860px; 
    }
    #oc_flash-player.video { 
      height: 484px;
      width: 860px; 
   }
}

@media (min-width: 1200px) and (max-width: 1400px) {
    #oc_body,
    #oc_flash-player-loading.audio { 
      width: 720px;
    }
    #oc_flash-player.video { 
      height: 405px;
      width: 720px;
    }
}

@media (min-width: 768px) and (max-width: 979px) {
    #oc_body,
    #oc_flash-player-loading.audio { 
      width: 450px; 
    }
    #oc_flash-player.video { 
      height: 253px;
      width: 450px;
    }
    #oc_video-time { 
      display: none; 
    }
}

@media (max-width: 767px) {
}

/**
 * Do some stuff to adjust the player size
 */
#player video,
#player audio {
  width: 95%;
  height: auto;
}

